samples/_failures_safe/1761630666_8334ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cb8e2a2.c: In function ‘main’:
./samples/SAFE/__tmp_9cb8e2a2.c:164:5: error: expected declaration or statement at end of input
  164 |     printf("Enter an expression to tokenize: ");
      |     ^~~~~~
